Replace com.google.common.collect.ImmutableLis with java.util.List